# roi-reconstruction

./: README.md
Head Results/Head 1/: final output.ply  hole.ply
Head Results/Head 2/: hole.ply  output aoi.ply  output patch.ply
decompose/: segment1.m
feature/: CMakeLists.txt  affine.h  metric.h  upsample.cpp
matlab_mat_feature/: Box10000.pcd  Cone10000.pcd  Cylinder10000.pcd  Sphere10000.pcd  ToCreateLearningModel.m  affine.txt  affine_norm.m  box10000.mat  classdata.mat  cone.mat  cylinder10000.mat  data.m  func.m  hole.txt  importdata_numeric.m  inv_metric.txt  metric.txt  nor.m  normalization.m  point.m  points.txt  sphere10000.mat
